# bevy-nbody

./: Cargo.toml  REAME.md  TODO.md
src/: aabb.rs  bvh.rs  forces.rs  main.rs
